recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:5: error: '<-' expected but integer literal found.
  for (i 1 <- 2)
         ^FourSquare:9: error: illegal start of simple expression
} 
^