recursion.logo.square.FourSquare.scala.code
override def run() {
}

def carre() {
  for (i 1 <- 2)
  avance(100)
  droite(90)
  avance(100)
}